[package]
name = "wgpu-experiment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24"
shaderc = "0.8"
wgpu = { version = "0.13", features = ["spirv"] }
pasts = "0.11"
futures-intrusive = "0.4"
